<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_confirmar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="padilla.david.formulariocontacto.ConfirmarActivity">

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textStyle="bold"
        android:textSize="@dimen/nombre"/>

    <LinearLayout
        android:id="@+id/llFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_below="@id/tvNombre">
        <TextView
            android:id="@+id/tvFecha2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/etiqueta"
            android:layout_marginLeft="@dimen/margin_left"/>
        <TextView
            android:id="@+id/tvFechaValor2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_valor"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/valor"
            android:layout_marginLeft="@dimen/margin_left"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llTel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_below="@id/llFecha">
        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/etiqueta"
            android:layout_marginLeft="@dimen/margin_left"/>
        <TextView
            android:id="@+id/tvTelefonoValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono_valor"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/valor"
            android:layout_marginLeft="@dimen/margin_left"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_below="@id/llTel">
        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/etiqueta"
            android:layout_marginLeft="@dimen/margin_left"/>
        <TextView
            android:id="@+id/tvEmailValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_valor"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/valor"
            android:layout_marginLeft="@dimen/margin_left"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_below="@id/llEmail">
        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripcion"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/etiqueta"
            android:layout_marginLeft="@dimen/margin_left"/>
        <TextView
            android:id="@+id/tvDescripcionValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_valor"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/valor"
            android:layout_marginLeft="@dimen/margin_left"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_editar"
        android:layout_below="@id/llDesc"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/margin_top_btn"
        android:onClick="editarContacto"
        />

</RelativeLayout>
