<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="padilla.david.formulariocontacto.MainActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/tieNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/til_nombre"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tvFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/til_fecha_nacimiento"
        android:textSize="@dimen/texto_fecha"/>

    <TextView
        android:id="@+id/tvFechaValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/texto_fecha"/>

    <Button
        android:id="@+id/btnCambiarFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cambiar_fecha"
        android:onClick="mostrarDatePicker"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/tieTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/til_telefono"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/tieEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/til_email"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/tieDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/til_descripcion"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnMiBoton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_confirmar"
        android:theme="@style/RaisedButton"
        android:onClick="confirmar"/>


</LinearLayout>
